src/test/resources/org/nest/nestml/_cocos/valid/variableDoesNotExist.nestml
neuron IAF:
  state:
    G1, G2, V1, V2 real = 0
  end

  equations:
    G1' = G2
    V1' = V2
  end

  update:
    exp(1.0) # y is undefined
  end

  function splTest():
    x real = 3
    a integer
    for a in 1 ... 10 step 1:
    # blaa
    end
    xx boolean
    if xx:
    end

    while xx:
    end
    steps(1ms)
  end
end